--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/dark-theme": "^2.0.1",
     "ajv": "^6.5.0",
     "antd": "^3.4.4",
     "axios": ">=0.18.1",
@@ -13,15 +14,15 @@
     "hoek": ">=4.2.1",
     "js-yaml": ">=3.13.1",
     "lodash": ">=4.17.13",
-    "lodash.template": ">=4.5.0",
     "lodash-es": ">=4.17.14",
+    "lodash.template": ">=4.5.0",
     "mem": ">=4.0.0",
     "merge": ">=1.2.1",
     "query-string": "^6.1.0",
     "react": "^16.3.2",
-    "react-dev-utils": ">=5.0.2",
     "react-app-rewire-less": "^2.1.1",
     "react-bootstrap": "^0.32.1",
+    "react-dev-utils": ">=5.0.2",
     "react-dom": ">=16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
